--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/main.min.css" />
 </head>
 
-<body>
+<body id="body">
 
     <header class="header">
         <nav class="header__nav">
@@ -23,10 +23,26 @@
                 <div class="header__logo">
                     <img src="images/logo.gif" alt="logotip">
                 </div>
+
                 <div class="search-bar">
-                    <input class="search-bar__item" type="text" placeholder="search movie">
-                    <i class='bx bx-search'></i>
+                    <input id="hid-Isearc" class="search-bar__item" type="text" placeholder="search movie">
+                    <i class='bx bx-search' id="id-searchBtn"></i>
                 </div>
+
+                <section class="search" onclick="funMain(event)" id="searchbox">
+                    <div class="container">
+                        <div class="search__main" id="search-main">
+                            <div class="search__box d-flex align-items-center">
+                                <h2 class="search__title">Result</h2>
+                            </div>
+                            <ul class="search__list" id="id-search">
+
+                            </ul>
+
+
+                        </div>
+                    </div>
+                </section>
 
                 <div class="dropdown">
                     <button class="btn__nav btn-bosh" type="button" id="dropdownMenuButton1">
@@ -41,9 +57,40 @@
                     <button class="btn__nav btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                       Janr
                     </button>
-                    <button class="btn__nav btn-yil dropdown-toggle" type="button" id="dropdownMenuButton1">
-                      Yil
+                    <button class="btn__nav btn-yil" type="button" id="dropdownMenuButton1" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+                      Sevimli
+                      <i class='bx bx-star'></i>
                     </button>
+                    <!-- ----------------------------------------offcanvas-right-[Sevimli]------------------------- -->
+                    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+                        <div class="offcanvas-header">
+                            <h5 id="offcanvasRightLabel">Sevimli Filmlar</h5>
+                            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                        </div>
+                        <div class="offcanvas-body">
+                            <ul class="offcanvas-body__list">
+
+                                <!--                                 
+                                <li class="movies__item ">
+                                    <div class="movies__img-item">
+                                        <img class='movies__img' src="http://i3.ytimg.com/vi/4hZi5QaMBFc/maxresdefault.jpg" alt="img">
+                                    </div>
+                                    <div class="movies__desc p-3">
+                                        <div class="movies__header d-flex">
+                                            <h3 class="movies__name">Harry Potter</h3>
+                                            <i class='bx bxs-bookmark-star'></i>
+                                        </div>
+                                        <p class="movies__year">2009</p>
+                                        <br>
+
+                                    </div>
+                                </li> -->
+
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- ----------------------------------------offcanvas-right-[Sevimli]------end------------------- -->
+
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                         <li><a class="dropdown-item" href="#">Action</a></li>
                         <li><a class="dropdown-item" href="#">Thriller</a></li>
@@ -62,30 +109,43 @@
     </header>
     <main class="main">
         <section class="hero">
+
             <div class="container__hero">
                 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        <p data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" data-bs-slide-to="0" class="active" aria-current="true"><a href="#">1</a></p>
+                        <p data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" data-bs-slide-to="1"><a href="#">2</a></p>
+                        <p data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" data-bs-slide-to="2"><a href="#">3</a></p>
+                        <p data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" data-bs-slide-to="2"><a href="#">4</a></p>
+                        <p data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" data-bs-slide-to="2"><a href="#">5</a></p>
                     </div>
-
                     <div class="carousel-inner">
                         <h2 class="carusel__title">PREMYERA</h2>
-                        <div class="carousel-item active">
-                            <img src="http://images.uzmovi.com/2022-03-23/16dfcf8e7c54290daffa7e3a87580578.jpg" class="d-block w-100" alt="hero_img">
-                            <a href="#"><i class='bx bx-play-circle'></i></a>
+                        <div class="carousel-item ">
+                            <img src="images/pirates.jpg" class="d-block w-100" alt="hero_img">
+                            <a href="http://uzmovi.com/tarjima-kinolar/4342-qaroqchilar-2-songgi-qirollik-xazinasi-premyera.html"><i class='bx bx-play-circle'></i></a>
                             <h2 class="carusel__imgTitle">Qaroqchilar 2 so'nggi qirollik xazinasi premyera</h2>
                         </div>
-                        <div class="carousel-item">
-                            <img src="http://images.uzmovi.com/2022-03-16/bafaf2f6d5d01b82848f61fe24a161d7.jpg" class="d-block w-100" alt="hero_img">
-                            <a href="#"><i class='bx bx-play-circle'></i></a>
-                            <h2 class="carusel__imgTitle">Adam loyihasi premyera</h2>
+                        <div class="carousel-item active">
+                            <img src="images/chelovek-pauk.jpg" class="d-block w-100" alt="hero_img">
+                            <a href="http://uzmovi.com/tarjima-kinolar/3842-orgimchak-odam-uyga-yol-yoq-premyera-uzbek-ozbek-tilida.html"><i class='bx bx-play-circle second_play-circle'></i></a>
+                            <h2 class="carusel__imgTitle imgtitle-spider">O'rgimchak odam uyga yo'l yo'q premyera</h2>
                         </div>
                         <div class="carousel-item">
-                            <img src="http://images.uzmovi.com/2022-03-12/8a3880961aac66b5126d2f3430c326ea.jpg" class="d-block w-100" alt="hero_img">
+                            <img src="images/adam.jpg" class="d-block w-100" alt="hero_img">
+                            <a href="http://uzmovi.com/tarjima-kinolar/4313-adam-loyihasi-premyera.html"><i class='bx bx-play-circle'></i></a>
+                            <h2 class="carusel__imgTitle">Adam loyihasi premyera</h2>
+                        </div>
+
+                        <div class="carousel-item">
+                            <img src="images/TINCHOKENA.jpg" class="d-block w-100" alt="hero_img">
+                            <a href="http://uzmovi.com/tarjima-kinolar/507-tinch-okeani-daxshatlari-2-tihookeanskiy-rubezh-2.html"><i class='bx bx-play-circle'></i></a>
+                            <h2 class="carusel__imgTitle imgtitle-spider">TINCH OKEANI DAXSHATLARI 3</h2>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/dedpool.jpg" class="d-block w-100" alt="hero_img">
                             <a href="#"><i class='bx bx-play-circle'></i></a>
-                            <h2 class="carusel__imgTitle">O'rgimchak odam uyga yo'l yo'q premyera</h2>
+                            <h2 class="carusel__imgTitle">DEADPOOL</h2>
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -99,73 +159,141 @@
                 </div>
             </div>
         </section>
+
+        <!-- <section class="slider">
+            <div class="container">
+                <div class="row slick-slide">
+
+
+
+
+                </div>
+            </div>
+        </section>
+ -->
+
+
+
+        <section class="movies__searchbar">
+            <div class="container">
+                <div class="searching__bar-main d-flex">
+                    <div class="search-bar">
+                        <input class="search-bar__item" type="text" placeholder="search movie">
+                        <i class='bx bx-search'></i>
+                    </div>
+                    <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+                         All
+                        </button>
+                        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
+                            <li><a class="dropdown-item active" href="#">Fantastic</a></li>
+                            <li>
+                                <a class="dropdown-item" href="#">Thriller</a>
+                            </li>
+                            <li><a class="dropdown-item" href="#">Music</a></li>
+                            <li><a class="dropdown-item" href="#">Adventure</a></li>
+                            <li><a class="dropdown-item" href="#">Comedy</a></li>
+                            <li><a class="dropdown-item" href="#">Animation</a></li>
+
+                        </ul>
+                    </div>
+                    <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+                         1992
+                        </button>
+                        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
+                            <li><a class="dropdown-item active" href="#">1995</a></li>
+                            <li><a class="dropdown-item" href="#">1998</a></li>
+                            <li><a class="dropdown-item" href="#">2000</a></li>
+                        </ul>
+                    </div>
+                    <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+                         2005
+                        </button>
+                        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
+                            <li><a class="dropdown-item active" href="#">2006</a></li>
+                            <li><a class="dropdown-item" href="#">2009</a></li>
+                            <li><a class="dropdown-item" href="#">2011</a></li>
+                            <li><a class="dropdown-item" href="#">2015</a></li>
+                            <li><a class="dropdown-item" href="#">2020</a></li>
+                            <li><a class="dropdown-item" href="#">2022</a></li>
+
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="movies">
             <div class="container">
+                <h2 class="movies__title">Tarjima Kinolar</h2>
+
+
+
                 <ul class="movies__list d-flex">
-                    <!-- <li class="movies__item ">
-                    <div class="movies__img-item">
-                        <img class='movies__img' src="http://i3.ytimg.com/vi/4hZi5QaMBFc/maxresdefault.jpg" alt="img">
-                    </div>
-                    <div class="movies__desc p-3">
-                        <div class="movies__header d-flex">
-                            <h3 class="movies__name">Harry Potter</h3>
-                            <i class='bx bxs-bookmark-star'></i>
+                    <li class="movies__item ">
+                        <div class="movies__img-item">
+                            <img class='movies__img' src="http://i3.ytimg.com/vi/4hZi5QaMBFc/maxresdefault.jpg" alt="img">
                         </div>
-                        <p class="movies__year">2009</p>
-                        <br>
-                        <button type="button" class="btn btn-primary movies__wathBtn" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        <div class="movies__desc p-3">
+                            <div class="movies__header d-flex">
+                                <h3 class="movies__name">Harry Potter</h3>
+                                <i class='bx bxs-bookmark-star'></i>
+                            </div>
+                            <p class="movies__year">2009</p>
+                            <br>
+                            <button type="button" class="btn btn-primary movies__wathBtn" data-bs-toggle="modal" data-bs-target="#exampleModal">
                           Watch
                         </button>
-                    </div>
-                </li>
-            </ul>
-            
-            
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
-                        <div class="modal-body  ">
-                            <div class="modal-img-desc">
-                                <div class="modal-img">
-                                    <img class="modal-img__item" src="http://i3.ytimg.com/vi/4hZi5QaMBFc/maxresdefault.jpg" alt="film-img">
-                                </div>
-                                <div class="desc-modal">
-                                    <p class="desc-modal-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione non totam officia, voluptate deserunt, quae similique facere quasi est provident, soluta aliquid ut eius. Doloremque dignissimos corrupti magnam voluptates
-                                        pariatur!
-                                    </p>
+                    </li>
+                </ul>
 
-                                </div>
+
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
-                            <div class="modal-desc">
-                                <ul class="modal__list">
-                                    <li class="modal__item">Film Name: asdasdasd</li>
-                                    <li class="modal__item">Film Rank:sadasdasd </li>
-                                    <li class="modal__item">Category: asdasdasd</li>
-                                    <li class="modal__item">Film Year: dasdasdasd</li>
-                                    <li class="modal__item">Film runtime: </li>
-                                </ul>
-                                <div class="modal-desc__btns">
-                                    <a class="modal__startFilm" href="#">Start film</a>
-                                    <button class="modal__favoritBtn">Add to favourits</button>
+                            <div class="modal-body  ">
+                                <div class="modal-img-desc">
+                                    <div class="modal-img">
+                                        <img class="modal-img__item" src="http://i3.ytimg.com/vi/4hZi5QaMBFc/maxresdefault.jpg" alt="film-img">
+                                    </div>
+                                    <div class="desc-modal">
+                                        <p class="desc-modal-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione non totam officia, voluptate deserunt, quae similique facere quasi est provident, soluta aliquid ut eius. Doloremque dignissimos corrupti magnam voluptates
+                                            pariatur!
+                                        </p>
+
+                                    </div>
                                 </div>
-                                <div class="like-btns">
-                                    <i class='bx bx-like'></i>
-                                    <input type="number" class="likeInput">
-                                    <i class='bx bx-dislike'></i>
+                                <div class="modal-desc">
+                                    <ul class="modal__list">
+                                        <li class="modal__item">Film Name: asdasdasd</li>
+                                        <li class="modal__item">Film Rank:sadasdasd </li>
+                                        <li class="modal__item">Category: asdasdasd</li>
+                                        <li class="modal__item">Film Year: dasdasdasd</li>
+                                        <li class="modal__item">Film runtime: </li>
+                                    </ul>
+                                    <div class="modal-desc__btns">
+                                        <a class="modal__startFilm" href="#">Start film</a>
+                                        <button class="modal__favoritBtn">Add to favourits</button>
+                                    </div>
+                                    <div class="like-btns">
+                                        <i class='bx bx-like'></i>
+                                        <input type="number" class="likeInput">
+                                        <i class='bx bx-dislike'></i>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
- -->
+
 
             </div>
-
 
 
         </section>
