--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
             <div class="container__hero">
                 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
-                        <p data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" data-bs-slide-to="0" class="active" aria-current="true"><a href="#">1</a></p>
-                        <p data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" data-bs-slide-to="1"><a href="#">2</a></p>
-                        <p data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" data-bs-slide-to="2"><a href="#">3</a></p>
-                        <p data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" data-bs-slide-to="2"><a href="#">4</a></p>
-                        <p data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" data-bs-slide-to="2"><a href="#">5</a></p>
+                        <p data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" data-bs-slide-to="0" class="active" aria-current="true"><a href="#">-1-</a></p>
+                        <p data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" data-bs-slide-to="1"><a href="#">-2-</a></p>
+                        <p data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" data-bs-slide-to="2"><a href="#">-3-</a></p>
+                        <p data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" data-bs-slide-to="2"><a href="#">-4-</a></p>
+                        <p data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" data-bs-slide-to="2"><a href="#">-5-</a></p>
                     </div>
                     <div class="carousel-inner">
                         <h2 class="carusel__title">PREMYERA</h2>
